see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

11-Aug-2010 Jean-Marie Simonet
 # [#21807] newsfeeds - implement drilldown from categories (Bill and JM)

10-Aug-2010 Andrew Eddie
 # Fixed issue [#21623] 303 redirections cause page subresources to be reloaded on WebKit browsers (Nicholas Dionysopoulos).

10-Aug-2010 Jean-Marie Simonet
 # [#21787] weblinks - provide specific params for categories (Bill and JM)
 # [#21783] Single newsfeed layout on drill down is using title not name. Thanks Elin.

10-Aug-2010 Andrew Eddie
 # Fixed issue [#21648] No e-mail sent to newly created users (via back-end) (Mārcis Kaksis).
 # Fixed issue [#21601] JDatabaseQuery fails on delete (Harald Leithner, Omar Ramos).
 # Fixed issue [#21600] single article - sef routing issues (bill richardson, Mathavan Jeyadev).
 # Fixed issue [#21672] Fix a number of issues in the single newsfeed view (Elin Waring).

-------------------- 1.6.0 Beta7 Release [09-Aug-2010] ------------------

09-Aug-2010 Ian MacLennan
 # [#20289] FTP Server: Do not save credentials through the Web Interface
 # [#21476] Not using correct Primary Key while saving
 # [#21579] E_STRICT error in JCacheCallback due to modRelatedItemsHelper::getList() being non-static
 # [#21597] New Menu Item - using filter in modal
 # [#21616] Page scrolls to top when click on Contact Slider
 # [#21643] Login screen with google chrome 5.0.375 fields misaligned
 # [#21710] Root user notice only on username
 # [#21719] Create and delete action in plugins permissions configuration
 # [#21726] Possible mispelling of "extension" in assorted helper files
 # [#21751] Missing JErrors in com_contact