@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+12-Aug-2010 Jean-Marie Simonet
+ ^ [#21690] filter order in extension manager:manage. Thanks Bill and Amy
+
 11-Aug-2010 Jean-Marie Simonet
  # [#21807] newsfeeds - implement drilldown from categories (Bill and JM)
 
